@@ -25,67 +25,36 @@ La.svd <- function(x, nu = min(n, p), nv = min(n, p))
     n <- nrow(x)
     p <- ncol(x)
     if(!n || !p) stop("a dimension is zero")
+    zero <- if(is.complex(x)) 0+0i else 0
 
-    if(is.complex(x)) {
-        if(nu == 0L) {
-            jobu <- "N"
-            u <- matrix(0+0i, 1L, 1L)  # dim is checked
-        }
-        else if(nu == n) {
-            jobu <- ifelse(n > p, "A", "S")
-            u <- matrix(0+0i, n, n)
-        }
-        else if(nu == p) {
-            jobu <- ifelse(n > p, "S", "A")
-            u <- matrix(0+0i, n, p)
-        }
-        else
-            stop("'nu' must be 0, nrow(x) or ncol(x)")
-
-        if (nv == 0L) {
-            jobv <- "N"
-            v <- matrix(0+0i, 1L, 1L) # dim is checked
-        }
-        else if (nv == n) {
-            jobv <- ifelse(n > p, "A", "S")
-            v <- matrix(0+0i, min(n, p), p)
-        }
-        else if (nv == p) {
-            jobv <- ifelse(n > p, "S", "A")
-            v <- matrix(0+0i, p, p)
-        }
-        else
-            stop("'nv' must be 0, nrow(x) or ncol(x)")
-        res <- .Internal(La_svd_cmplx(jobu, jobv, x, double(min(n, p)), u, v))
-        return(res[c("d", if(nu) "u", if(nv) "vt")])
-    } else {
-        if(nu || nv) {
-            np <- min(n, p)
-            if(nu <= np && nv <= np) {
-                jobu <- "S"
-                u <- matrix(0, n, np)
-                vt <- matrix(0, np, p)
-                nu0 <- nv0 <- np
-            } else {
-                jobu <- "A"
-                u <- matrix(0, n, n)
-                vt <- matrix(0, p, p)
-                nu0 <- n; nv0 <- p
-            }
+    if(nu || nv) {
+        np <- min(n, p)
+        if(nu <= np && nv <= np) {
+            jobu <- "S"
+            u <- matrix(zero, n, np)
+            vt <- matrix(zero, np, p)
+            nu0 <- nv0 <- np
         } else {
-            jobu <- "N"
-            # these dimensions _are_ checked, but unused
-            u <- matrix(0, 1L, 1L)
-            vt <- matrix(0, 1L, 1L)
+            jobu <- "A"
+            u <- matrix(zero, n, n)
+            vt <- matrix(zero, p, p)
+            nu0 <- n; nv0 <- p
         }
-        ## type is now coerced internally
-        res <- .Internal(La_svd(jobu, x, double(min(n,p)), u, vt))
-        res <- res[c("d", if(nu) "u", if(nv) "vt")]
-        if(nu && nu < nu0) res$u <- res$u[, 1L:min(n, nu), drop = FALSE]
-        if(nv && nv < nv0) res$vt <- res$vt[1L:min(p, nv), , drop = FALSE]
-        return(res)
+    } else {
+        jobu <- "N"
+        ## these dimensions _are_ checked, but unused
+        u <- matrix(zero, 1L, 1L)
+        vt <- matrix(zero, 1L, 1L)
     }
-    ## not reached
+
+    res <- if(is.complex(x))
+       .Internal(La_svd_cmplx(jobu, x, double(min(n,p)), u, vt))
+    else
+       .Internal(La_svd(jobu, x, double(min(n,p)), u, vt))
+    res <- res[c("d", if(nu) "u", if(nv) "vt")]
+    if(nu && nu < nu0) res$u <- res$u[, 1L:min(n, nu), drop = FALSE]
+    if(nv && nv < nv0) res$vt <- res$vt[1L:min(p, nv), , drop = FALSE]
+    res
 }
 
 La_version <- function() .Internal(La_version())
